--- a/github-user-search/src/css/base-style.css
+++ b/github-user-search/src/css/base-style.css
@@ -1,3 +1,4 @@
+/* @import "tailwindcss"; */
 body{
     display: flex;
     flex-direction: column;
@@ -23,7 +24,11 @@ main, .center-text{
 }
 .center-form{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
+}
+.horizontal-label{
+    gap:10px
 }
