--- a/github-user-search/src/index.css
+++ b/github-user-search/src/index.css
@@ -1,7 +1,7 @@
-/* @import "tailwindcss"; */
-@tailwind base;
+@import "tailwindcss";
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
